sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#maxspeed__ungiven21/errors.duarouter
Error: Missing maxspeed definition in lane '2_0'.
Quitting (on error).
